--- a/index.html
+++ b/index.html
@@ -12,3 +12,7 @@
     <script type="module" src="index.js"></script>
   </body>
 </html>
+
+<!-- 
+simplemente hemos creado un html que le hemos dado un link de estilo,despues en el body hemos creado un titulo con el "h1". 
+Despues hemos creado una div con una classe que la vamos a llamar "lista" que vamos a llamar despues en el js. -->
